[gd_scene load_steps=3 format=3 uid="uid://r5iyxb5q2chm"]

[ext_resource type="Script" path="res://scripts/GetPlayerNameInfo.gd" id="1_g4ccj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_858fr"]
bg_color = Color(0.478431, 0.811765, 0.992157, 0.772549)

[node name="GetPlayerNameInfo" type="CanvasLayer"]
script = ExtResource("1_g4ccj")

[node name="Scene Label" type="Label" parent="."]
offset_right = 159.0
offset_bottom = 23.0
size_flags_horizontal = 0
text = "Get Player Name Scene"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -322.0
offset_right = 112.5
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 580)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_858fr")

[node name="MainVBox" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(0, 500)
layout_mode = 2

[node name="HeadlineHBox" type="HBoxContainer" parent="MarginContainer/PanelContainer/MainVBox"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MainVBox/HeadlineHBox"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 11

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MainVBox/HeadlineHBox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Enter player names:"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/MainVBox"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MainVBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 20

[node name="PlayerEnterVBox" type="VBoxContainer" parent="MarginContainer/PanelContainer/MainVBox/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MainVBox/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 14
alignment = 1

[node name="RemoveButton" type="Button" parent="MarginContainer/PanelContainer/MainVBox/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Remove Player"

[node name="AddButton" type="Button" parent="MarginContainer/PanelContainer/MainVBox/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Player"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/PanelContainer/MainVBox/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NextButton" type="Button" parent="MarginContainer/PanelContainer/MainVBox/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Next"

[node name="MorePlayersLabel" type="Label" parent="MarginContainer/PanelContainer/MainVBox/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Need at least 4 players"

[connection signal="pressed" from="MarginContainer/PanelContainer/MainVBox/VBoxContainer/HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MainVBox/VBoxContainer/HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MainVBox/VBoxContainer/HBoxContainer2/NextButton" to="." method="_on_next_button_pressed"]
